2009-01-31  higepon  <higepon@users.sourceforge.jp>

        * RecordProcedures.cpp (scheme::makeRecordTypeDescriptorEx): Fixed the sealed bug. Thanks to leque(Issue 44).

2009-01-30  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Fixed the bug of (raise 1). Thanks to leque(Issue 42).

        * scripts/gen-doc-from-r6rs.scm : R6RS document.

2009-01-30  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp: Added port-transcoder.

2009-01-30  higepon  <higepon@users.sourceforge.jp>

        * scripts/gen-doc-from-r6rs.scm : Added for generating document for R6RS.

2009-01-29  higepon  <higepon@users.sourceforge.jp>

        * doc/text/srfi-98.txt: Wrote document for srfi-98.

        * lib/mosh/process.ss: Wrote document for process management.

        * doc/text/Download.txt.in : Wrote document for download and install.

2009-01-28  higepon  <higepon@users.sourceforge.jp>

        * doc/text/About.txt : Wrote document titled "About".

        * Wrote document for Database Independent Interface.

        * Wrote document for Pretty Printing.

        * Wrote document for Unit Testing.

2009-01-27  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/test.ss (mosh): Improved test showing results.

2009-01-27  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added port?, textual-port?.

2009-01-26  higepon  <higepon@users.sourceforge.jp>

        * Added dbi-getter and dbi-result->list.

        * lib/dbi.ss: added dbi-connect, dbi-execute and dbi-prepare.

2009-01-23  higepon  <higepon@users.sourceforge.jp>

        * dbi: Added dbi.ss library and tests. (They are empty now).

        * test/clos.scm : Added test for Tiny CLOS.

2009-01-22  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp : Added output-port?.

        * test/mysql.scm: Added test for mysql library.

        * Added configure option --with-mysql