@@ -40,6 +40,7 @@ Object internalFfiSupportedPEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiLookupEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiOpenEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiCallTointEx(VM* theVM, int argc, const Object* argv);
+Object internalFfiCallTodoubleEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiCallTovoidEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiCallTovoidMulEx(VM* theVM, int argc, const Object* argv);
 Object internalFfiPointerTostringEx(VM* theVM, int argc, const Object* argv);
