@@ -983,6 +983,7 @@
     (%ffi-call->int interaction sys)
     (%ffi-call->void interaction sys)
     (%ffi-call->void* interaction sys)
+    (%ffi-call->double interaction sys)
     (%ffi-call->string-or-zero interaction sys)
     (%ffi-pointer->string interaction sys)
     (%ffi-pointer-ref interaction sys)
