@@ -1,5 +1,7 @@
 2009-01-31  higepon  <higepon@users.sourceforge.jp>
 
+        * lib/mosh/ffi.ss : Added double/flonum support to FFI system.(IA32).
+
         * RecordProcedures.cpp (scheme::makeRecordTypeDescriptorEx): Fixed the sealed bug. Thanks to leque(Issue 44).
 
 2009-01-30  higepon  <higepon@users.sourceforge.jp>
